Fix issues with a gap between first parallax and navigation #1804 @1.5

--- a/src/Esteren/PortalBundle/Resources/public/css/initializer.css
+++ b/src/Esteren/PortalBundle/Resources/public/css/initializer.css
@@ -30,6 +30,7 @@
 *.text-darkred { color: darkred !important; }
 *.text-green   { color: green !important; }
 *.text-black   { color: black !important; }
+*.text-trans   { color: transparent !important; }
 
 *.text-shadow-black-10 { text-shadow: 0 0 10px rgba(0,0,0,0.75) !important; }
 
@@ -65,3 +66,15 @@
 .mb5  { margin-bottom: 5px; }
 .mb10 { margin-bottom: 10px; }
 .mb15 { margin-bottom: 15px; }
+
+h1:empty,
+h2:empty,
+h3:empty,
+h4:empty,
+h5:empty,
+h6:empty,
+article:empty,
+section:empty
+{
+    display: none;
+}
