--- a/src/Esteren/PortalBundle/Resources/public/sass/theme.scss
+++ b/src/Esteren/PortalBundle/Resources/public/sass/theme.scss
@@ -1,4 +1,8 @@
 
+#layout {
+    clear: both;
+}
+
 .parallax-container {
     min-height: 380px;
     line-height: 0;
@@ -8,11 +12,16 @@
 
 .parallax-container .section {
     width: 100%;
+    padding-bottom: 0;
 }
 
 #esteren_logo {
     max-height: 60px;
     margin-top: 5px;
+}
+
+#main_navigation {
+    overflow: hidden;
 }
 
 @media only screen and (max-width: #{$medium-screen}) {
